show guest image in guest list (find/list view) rather than url (closes #54), made the notes field a single string instead of comma seperated list (closes #53), replaced inline editing with its own view of guest data (closes #52), expanded explainations for fields in guest add/edit views (closes #51), renamed project titles to 'Guest Timeline xxx' to be more user friendly [cannot use mosaic - See Dave Black] (closes #50), implemented word wrap and column/row dynamics for guest list/find view (closes #48), dumbed down and simplified all entry fields (closes #47) - there is a seperate ticket for time (AM/PM) - issue number 39, all fields should not break with 'funky' data such as special characters, commas, numbers, etc (closes #46)

--- a/client/css/mosaic.css
+++ b/client/css/mosaic.css
@@ -191,7 +191,7 @@ html, body {
 	background-color: #50524c;
 	height: 100%;
 }
-#adminAddGuest, #adminFindGuest{
+#adminAddGuest, #adminFindGuest, #adminEditGuest{
 	margin-top: 10px;
 	color: black;
 	margin-right: 100px;
@@ -245,4 +245,15 @@ img {
 }
 .badge-royal{
 	background-color: #9933FF;
+}
+#guestListTableGrid{
+	table-layout:fixed
+}
+#guestListTableGrid td, th{
+	word-wrap: break-word;
+	vertical-align: middle;
+	text-align: center;
+}
+#guestListTableGrid tr:hover td{
+	background-color: #99CCFF;
 }
